docs-archive/apache-airflow-providers-openai/1.8.2/_sources/_api/airflow/providers/openai/operators/openai/index.rst.txt
airflow.providers.openai.operators.openai
=========================================

.. py:module:: airflow.providers.openai.operators.openai


Classes
-------

.. autoapisummary::

   airflow.providers.openai.operators.openai.OpenAIEmbeddingOperator
   airflow.providers.openai.operators.openai.OpenAIResponseOperator
   airflow.providers.openai.operators.openai.OpenAITriggerBatchOperator


Module Contents
---------------

.. py:class:: OpenAIEmbeddingOperator(conn_id, input_text, model = 'text-embedding-3-small', embedding_kwargs = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Operator that accepts input text to generate OpenAI embeddings using the specified model.

   :param conn_id: The OpenAI connection ID to use.
   :param input_text: The text to generate OpenAI embeddings for. This can be a string, a list of strings,
                   a list of integers, or a list of lists of integers.
   :param model: The OpenAI model to be used for generating the embeddings.
   :param embedding_kwargs: Additional keyword arguments to pass to the OpenAI `create_embeddings` method.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:OpenAIEmbeddingOperator`
       For possible options for `embedding_kwargs`, see:
       https://platform.openai.com/docs/api-reference/embeddings/create


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('input_text',)



   .. py:attribute:: conn_id


   .. py:attribute:: input_text


   .. py:attribute:: model
      :value: 'text-embedding-3-small'



   .. py:attribute:: embedding_kwargs


   .. py:property:: hook
      :type: airflow.providers.openai.hooks.openai.OpenAIHook


      Return an instance of the OpenAIHook.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: OpenAIResponseOperator(conn_id, input_text, model = 'gpt-4o-mini', response_kwargs = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Operator that generates a model response using the OpenAI Responses API.

   The operator is synchronous and returns the response's aggregated output text. For
   ``previous_response_id`` chaining, ``background=True`` responses, or access to the full
   structured response, use :class:`~airflow.providers.openai.hooks.openai.OpenAIHook` directly.

   :param conn_id: The OpenAI connection ID to use.
   :param input_text: The input prompt for the model. This can be a string or a structured list of
       input items.
   :param model: The OpenAI model to use.
   :param response_kwargs: Additional keyword arguments to pass to the OpenAI ``create_response``
       method (for example ``instructions``, ``tools``, ``conversation`` or ``previous_response_id``).

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:OpenAIResponseOperator`
       For possible options, see:
       https://platform.openai.com/docs/api-reference/responses/create


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('input_text',)



   .. py:attribute:: conn_id


   .. py:attribute:: input_text


   .. py:attribute:: model
      :value: 'gpt-4o-mini'



   .. py:attribute:: response_kwargs


   .. py:property:: hook
      :type: airflow.providers.openai.hooks.openai.OpenAIHook


      Return an instance of the OpenAIHook.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: OpenAITriggerBatchOperator(file_id, endpoint, conn_id = OpenAIHook.default_conn_name, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), wait_seconds = 3, timeout = 24 * 60 * 60, wait_for_completion = True, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Operator that triggers an OpenAI Batch API endpoint and waits for the batch to complete.

   :param file_id: Required. The ID of the batch file to trigger.
   :param endpoint: Required. The OpenAI Batch API endpoint to trigger.
   :param conn_id: Optional. The OpenAI connection ID to use. Defaults to 'openai_default'.
   :param deferrable: Optional. Run operator in the deferrable mode.
   :param wait_seconds: Optional. Number of seconds between checks. Only used when ``deferrable`` is False.
       Defaults to 3 seconds.
   :param timeout: Optional. The amount of time, in seconds, to wait for the request to complete.
       Only used when ``deferrable`` is False. Defaults to 24 hour, which is the SLA for OpenAI Batch API.
   :param wait_for_completion: Optional. Whether to wait for the batch to complete. If set to False, the operator
       will return immediately after triggering the batch. Defaults to True.

   .. seealso::
       For more information on how to use this operator, please take a look at the guide:
       :ref:`howto/operator:OpenAITriggerBatchOperator`


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('file_id',)



   .. py:attribute:: conn_id
      :value: 'openai_default'



   .. py:attribute:: file_id


   .. py:attribute:: endpoint


   .. py:attribute:: deferrable


   .. py:attribute:: wait_seconds
      :value: 3



   .. py:attribute:: timeout
      :value: 86400



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: batch_id
      :type:  str | None
      :value: None



   .. py:property:: hook
      :type: airflow.providers.openai.hooks.openai.OpenAIHook


      Return an instance of the OpenAIHook.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)

      Invoke this callback when the trigger fires; return immediately.

      Relies on trigger to throw an exception, otherwise it assumes execution was
      successful.



   .. py:method:: on_kill()

      Cancel the batch if task is cancelled.



